# Archy

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  package.json  start.bat  start.sh
.claude/: Claude.md  backend.md  conventions.md  frontend.md  known-issues.md  project.md  prompts.md  roadmap.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
backend/: .env.example  dev_server.py  mcp_server.py  pyproject.toml  requirements.txt
backend/app/: config.py  main.py
backend/app/architecture/: __init__.py  framework_detector.py  framework_plugins.py  graph_engine.py  parser_layer.py
backend/app/parsers/: graph_to_prompt.py
backend/app/prompts/: brain_batch_analysis.md  brain_chat_system.md  deep_file_analysis.md
backend/app/routers/: advanced.py  ai.py  analyze.py  brain.py  config.py  database.py  editor.py  file_insight.py  generate.py  git_info.py  insights.py  intelligence.py  models.py  parser.py  projects.py  registry.py  runtime.py  security.py  snapshots.py  status.py  trace.py
backend/app/schemas/: graph.py
docs/: ARCHITECTURE.md  BRANCH_GOVERNANCE.md  REPOSITORY_STRUCTURE.md
examples/sample_django/: manage.py
frontend/: .env.example  README.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.css  App.tsx  index.css
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: lib.rs  main.rs
(+80 files in other folders)
