[package]
name = "archy"
version = "0.5.0"
description = "AI-powered architecture visualization for Python backends"
authors = ["Archy Contributors"]
edition = "2021"

[lib]
name = "archy_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
